# mgx

./: CMakeLists.txt  CMakePresets.json  README.md  cg-dependencies.dot
.github/workflows/: ci-ubuntu.yml
Core/: CMakeLists.txt
Core/Geom/: CommandExportMDL.cpp  GeomManager.cpp  ImportCATIAImplementation.cpp  ImportIGESImplementation.cpp
Core/Internal/: ExportMDLImplementation.cpp  ImportMDL2Commandes.cpp  ImportMDLImplementation.cpp  ImportMDLItf.cpp  PythonWriter.cpp
Core/Mesh/: MeshImplementation.cpp  MeshImplementationMeshGems.cpp  MeshImplementationMeshGemsVol.cpp  MeshImplementationTetgen.cpp  MeshModificationBySepa.cpp
Core/Smoothing/: VolumicSmoothing.cpp
Core/Structured/: Material.cpp  StructuredMesh.cpp
Core/Topo/: CommandImportTopoMDL.cpp  TopoManager.cpp  TopoManagerIfc.cpp
Core/protected/Geom/: CommandExportMDL.h  CommandImportMDL.h
Core/protected/Internal/: ExportMDLImplementation.h  ImportMDL2Commandes.h  ImportMDLImplementation.h  ImportMDLItf.h
Core/protected/Mesh/: MeshImplementation.h
Core/protected/MeshGemsPlugin/: MGCurve.h  MGEntity.h  MGManager.h  MGOCCManager.h  MGOCCSurface.h  MGOCCVolume.h  MGPoint.h  MGSurface.h  MGVolume.h
Core/protected/Structured/: Material.h  StructuredMesh.h
Core/protected/Topo/: BlockMeshingProperty.h  BlockMeshingPropertyDelaunayMeshGems.h  CoFaceMeshingProperty.h  FaceMeshingPropertyMeshGems.h  TopoManager.h  TopoManagerIfc.h
GMSH/: CMakeLists.txt
Magix3D/: CMakeLists.txt  main.cpp
Magix3D/cmake/: Magix3D.in
QtComponents/: CMakeLists.txt  QtBlockMeshingPropertyAction.cpp  QtComponents.qrc  QtFaceMeshingPropertyAction.cpp  QtMgx3DApplication.cpp  QtMgx3DGroupNamePanel.cpp  QtMgx3DMainWindow.cpp
QtComponents/protected/QtComponents/: QtBlockMeshingPropertyAction.h  QtFaceMeshingPropertyAction.h  QtMgx3DMainWindow.h
QtVtkComponents/: CMakeLists.txt  QtVtkMgx3DExperimentalRoomPanel.cpp  QtVtkMgx3DMainWindow.cpp  VTKMgx3DStructuredMeshEntityRepresentation.cpp
QtVtkComponents/cmake/: QtVtkComponentsConfig.cmake.in
QtVtkComponents/protected/QtVtkComponents/: QtVtkMgx3DMainWindow.h
TkUtil/: CMakeLists.txt  Date.cpp  DefaultLog.cpp  File.cpp  LocalizedError.cpp  Log.cpp  MemoryError.cpp  NumericConversions.cpp  NumericServices.cpp  ReferencedMutex.cpp  ReferencedObject.cpp  TraceLog.cpp  UTF8String.cpp  UnicodeString.cpp
TkUtil/cmake/: TkUtilConfig.cmake.in
TkUtil/protected/TkUtil/: AutoArrayPtr.h  Date.h  DefaultLog.h  Exception.h  File.h  InternalError.h  LocalizedError.h  Log.h  MemoryError.h  NumericConversions.h  NumericServices.h  ReferencedMutex.h  ReferencedObject.h  TraceLog.h  UTF8String.h  UnicodeString.h  util_config.h
Utils/: CMakeLists.txt  CommandManager.cpp
VtkComponents/: CMakeLists.txt  vtkDMAParallelRenderManager.cpp  vtkECMFactory.cpp
cmake/: FindCgns.cmake  FindMesquite.cmake  common.cmake  config.h.in  omniORB4.cmake  version.cmake
pyMagix3D/: CMakeLists.txt  M3DPythonSession.cpp  lanceur.ksh  pyMagix3D.doxygen
scripts/anl/: Magix3D
test_link/: CMakeLists.txt  test_import_basic.py  test_topo_block.py
